# intern_sherry

./: .gitignore  README.md  check_rms.py  ecg_removal.py  my_aliases.sh  rr_emg_C071CC2A3ADB_20260602_095217.csv  verify_ats_offline.py
doc/: Ankle Robot主动抗阻训练设计方案.docx  电脑用户入职准备清单.xlsx
ecg_removal_py/: README.md  pyproject.toml
ecg_removal_py/ecg_removal_py/: __init__.py  ats.py  cli.py  config.py  io.py  preprocess.py
ecg_removal_py/tests/: test_ats.py
emg_sim/: README.md  __init__.py  packet_builder.py  pyproject.toml  rr_sink.py  run.py  signal_model.py  stream_runtime.py
emg_sim/_out/rr_20260519_172248/: rr_emg_SIM0101_20260519_172248.csv  rr_imu_SIM0101_20260519_172248.csv  rr_meta_SIM0101_20260519_172248.json
emg_sim/_out2/rr_20260519_172309/: rr_emg_SIM0101_20260519_172309.csv  rr_imu_SIM0101_20260519_172309.csv  rr_meta_SIM0101_20260519_172309.json
emg_sim/tests/: test_emg_sim.py
rr_20260526_102634/: rr_emg_C071CC2A3ADB_20260526_102634.csv  rr_emg_cleaned.csv  rr_meta_C071CC2A3ADB_20260526_102634.json
semg-online-ecg-removal/: requirements.txt
semg-online-ecg-removal/code/: sEMG_simulation_multichannel.py  sEMG_simulation_singalchannel.py  update_heartbeat_calculation.py  update_online_filter.py  update_qrs_detection.py  update_sEMG_simulation.py
semg-online-ecg-removal/data/: rr_emg_0602.csv
semg-online-ecg-removal/update_code/: update_heartbeat_calculation.py  update_online_envelope.py  update_online_semg_ecg_removal.py  update_online_three_layer_filter_bank.py  update_qrs_detection.py  update_sEMG_simulation.py
