[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecg-removal-py"
version = "0.1.0"
description = "Standalone Python ATS ECG removal for EMG signals"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ecg-removal = "ecg_removal_py.cli:main"
